telepathy-qt (0.9.3-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump libfarstream-0.1-dev, libtelepathy-farstream-dev, libtelepathy-glib-dev dependencies.
  * Remove fix_ftbfs_gcc47.patch applied upstream.
  * Update libtelepathy-qt4-2.symbols.
  * Remove git-buildpackage directory configuration options.
  * Remove uneeded shlib:Depends from libtelepathy-qt4-dev control .

 -- Diane Trout <diane@ghic.org>  Sat, 08 Jun 2013 23:23:32 -0700

telepathy-qt (0.9.1-4) unstable; urgency=low

  * Add extra (optional=inline) markings on all inline
    symbols that still appear in the symbols file and confirm
    it with pkgkde-symbolshelper for all architectures. (Closes: #676259)

 -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sun, 17 Jun 2012 11:08:30 +0200

telepathy-qt (0.9.1-3) unstable; urgency=low

  * Add patch fvisibility-inlines-hidden.patch to pass
    -fvisibility-inlines-hidden to the compiler and avoid
    having inline functions in the symbols file.
  * Cleanup libtelepathy-qt4-2.symbols from all inline
    functions to fix FTBFS (Closes: #676259).

 -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Thu, 07 Jun 2012 00:20:45 +0200

telepathy-qt (0.9.1-2) unstable; urgency=low

  * Team upload.
  * Fix FTBFS due to jquery symlink creation

 -- Laurent Bigonville <bigon@debian.org>  Tue, 05 Jun 2012 12:47:15 +0200

telepathy-qt (0.9.1-1) unstable; urgency=low

  * Team upload.
  * New upstream release. (Closes: #647835)
    - Upstream source package renamed to telepathy-qt

  [ Laurent Bigonville ]
  * Build against farstream instead of farsight (Closes: #672107)
  * Bump soname of both libraries
  * Bump build-dependencies
  * Switch to dpkg-source 3.0 (quilt) format
  * debian/control: Bump Standards-Version to 3.9.3 (no further changes)
  * Bump debhelper compatibility to 9
  * debian/watch: Update watch file to match new upstream name
  * Link jquery.js file to the one provided by libjs-jquery

  [ George Kiagiadakis ]