@@ -6,6 +6,7 @@ telepathy-qt (0.9.3-1) UNRELEASED; urgency=low
   * Update libtelepathy-qt4-2.symbols.
   * Remove git-buildpackage directory configuration options.
   * Remove uneeded shlib:Depends from libtelepathy-qt4-dev control .
+  * Refresh patches.
 
  -- Diane Trout <diane@ghic.org>  Sat, 08 Jun 2013 23:23:32 -0700
 
